# syncer

./: Cargo.toml  make-release.bash
data/: com.github.Syncer.desktop
src/: adv_switchrow.rs  advanced_page.rs  app.rs  check_object.rs  details_window.rs  filter_expander_row.rs  filter_row.rs  log_header.rs  log_item.rs  log_window.rs  main.rs  options_page.rs  output_header.rs  output_item.rs  output_window.rs  profile_object.rs  profile_pane.rs  profile_row.rs  progress_pane.rs  rsync.rs  rsync_page.rs  rsync_pane.rs  rsync_process.rs  sidebar.rs  sidebar_row.rs  stats_table.rs  utils.rs  window.rs
src/resources/: resources.gresource.xml  shortcuts-dialog.ui  style.css
src/resources/ui/: adv_switchrow.ui  advanced_page.ui  details_window.ui  filter_expander_row.ui  filter_row.ui  log_header.ui  log_item.ui  log_window.ui  options_page.ui  output_header.ui  output_item.ui  output_window.ui  profile_pane.ui  profile_row.ui  progress_pane.ui  rsync_page.ui  rsync_pane.ui  sidebar.ui  sidebar_row.ui  stats_table.ui  window.ui
src/resources/ui/builder/: filter_dialog.ui  profile_dialog.ui  profile_name_dialog.ui  rsync_cmdline_dialog.ui  sidebar_item.ui
src/resources/ui/details_window/: item.ui
src/resources/ui/options_page/: profile_item.ui  profile_list_item.ui
src/resources/ui/sidebar_view/: item.ui
